--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div
           class="flex border-2 p-2.5 bg-background justify-between items-center relative z-10"
         >
-          <h3 class="text-2xl xl:text-6xl">Hello, I'm Kenneth</h3>
+          <h3 class="text-2xl xl:text-5xl">Hello, I'm Kenneth</h3>
           <img
             class="w-7 xl:w-16"
             src="/closing-tag.svg"
@@ -29,10 +29,9 @@
       </div>
 
       <div class="col-span-2 relative sm:col-span-3">
-        <div
-          class="border-2 p-2.5 text-2xl bg-background z-50 relative xl:text-7xl"
-        >
-          Full-Stack Developer
+        <div class="border-2 p-2.5 bg-background z-10 relative">
+          <div class="xl:text-xl">aspiring</div>
+          <div class="text-2xl xl:text-7xl">Full-Stack Developer</div>
         </div>
         <div
           class="bg-background-2 translate-x-2 translate-y-2.5 z-0 w-full h-full absolute top-0"
