fix: made tailwind extend instaed of override || fixed incorrect border color as result

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body class="bg-background">
     <div
-      class="grid gap-8 border-b-4 grid-cols-2 p-5 sm:p-8 sm:grid-cols-[1fr_3fr_1fr] xl:px-56 xl:py-28"
+      class="grid gap-8 border-b-4 border-black grid-cols-2 p-5 sm:p-8 sm:grid-cols-[1fr_3fr_1fr] xl:px-56 xl:py-28"
     >
       <div class="col-span-2 relative z-10 bg-background">
         <div
-          class="flex border-2 p-2.5 bg-background justify-between items-center relative z-10"
+          class="flex border-2 border-black p-2.5 bg-background justify-between items-center relative z-10"
         >
           <h3 class="text-2xl xl:text-5xl">Hello, I'm Kenneth</h3>
           <img
@@ -29,7 +29,7 @@
       </div>
 
       <div class="col-span-2 relative sm:col-span-3">
-        <div class="border-2 p-2.5 bg-background z-10 relative">
+        <div class="border-2 border-black p-2.5 bg-background z-10 relative">
           <div class="xl:text-xl">aspiring</div>
           <div class="text-2xl xl:text-7xl">Full-Stack Developer</div>
         </div>
@@ -38,7 +38,7 @@
         ></div>
       </div>
 
-      <div class="relative border-2 aspect-square sm:w-40 xl:w-52">
+      <div class="relative border-2 border-black aspect-square sm:w-40 xl:w-52">
         <div class="relative z-10 bg-background w-full h-full p-2.5">
           <img
             id="man-using-computer"
@@ -55,7 +55,9 @@
       <div
         class="relative col-span-2 row-start-3 sm:col-span-3 xl:col-start-2 xl:col-span-1"
       >
-        <div class="border-2 h-full relative z-10 bg-background p-2.5 text-2xl">
+        <div
+          class="border-2 border-black h-full relative z-10 bg-background p-2.5 text-2xl"
+        >
           Passionate in this field, I am equipped with skills that enable me to
           solve real-world problems, transforming ideas into software solutions.
         </div>
@@ -66,22 +68,22 @@
 
       <div class="relative self-end sm:col-span-2 xl:col-span-1">
         <p
-          class="z-10 relative text-blue-600 border-2 bg-background-2 text-background text-xl p-2.5"
+          class="z-10 relative border-2 border-black bg-background-2 text-background text-xl p-2.5"
         >
           learn more about me below
         </p>
         <div
-          class="bg-background translate-x-2 translate-y-2.5 z-0 w-full h-full absolute top-0 border-2"
+          class="bg-background translate-x-2 translate-y-2.5 z-0 w-full h-full absolute top-0 border-2 border-black"
         ></div>
       </div>
     </div>
 
     <div
-      class="grid gap-8 border-b-4 p-5 grid-cols-1 sm:p-8 xl:px-56 xl:py-28 xl:grid-cols-[6fr_7fr_7fr]"
+      class="grid gap-8 border-b-4 border-black p-5 grid-cols-1 sm:p-8 xl:px-56 xl:py-28 xl:grid-cols-[6fr_7fr_7fr]"
     >
       <div class="relative xl:col-span-3">
         <h1
-          class="relative z-10 bg-background font-bold border-2 p-2.5 text-5xl"
+          class="relative z-10 bg-background font-bold border-2 border-black p-2.5 text-5xl"
         >
           My Skills
         </h1>
@@ -90,7 +92,9 @@
         ></div>
       </div>
 
-      <div class="border-2 bg-background flex relative xl:row-span-2">
+      <div
+        class="border-2 border-black bg-background flex relative xl:row-span-2"
+      >
         <div
           class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
         ></div>
@@ -154,7 +158,7 @@
         </div>
       </div>
 
-      <div class="border-2 relative xl:col-span-2">
+      <div class="border-2 border-black relative xl:col-span-2">
         <div
           class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
         ></div>
@@ -204,7 +208,7 @@
         </div>
       </div>
 
-      <div class="border-2 bg-background flex relative">
+      <div class="border-2 border-black bg-background flex relative">
         <div
           class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
         ></div>
@@ -238,7 +242,7 @@
         </div>
       </div>
 
-      <div class="border-2 bg-background relative">
+      <div class="border-2 border-black bg-background relative">
         <div
           class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
         ></div>
@@ -287,10 +291,12 @@
       </div>
     </div>
 
-    <div class="border-b-4 flex flex-col p-5 gap-8 xl:px-56 xl:py-28 sm:p-8">
+    <div
+      class="border-b-4 border-black flex flex-col p-5 gap-8 xl:px-56 xl:py-28 sm:p-8"
+    >
       <div class="relative">
         <h1
-          class="relative z-50 bg-background font-bold border-2 p-2.5 text-5xl"
+          class="relative z-50 bg-background font-bold border-2 border-black p-2.5 text-5xl"
         >
           Projects
         </h1>
@@ -300,13 +306,13 @@
       </div>
 
       <div
-        class="border-2 grid grid-cols-1 xl:grid-cols-[5fr_2fr] xl:grid-rows-[2fr_15fr_3fr]"
+        class="border-2 border-black grid grid-cols-1 xl:grid-cols-[5fr_2fr] xl:grid-rows-[2fr_15fr_3fr]"
       >
-        <div class="border p-2.5 text-lg bg-background font-bold">
+        <div class="border border-black p-2.5 text-lg bg-background font-bold">
           Trabahuso
         </div>
 
-        <div class="border bg-background xl:row-span-2">
+        <div class="border border-black bg-background xl:row-span-2">
           <img
             src="/project-demos/trabahuso-demo.gif"
             alt="trabahuso website gif demo"
@@ -315,7 +321,7 @@
         </div>
 
         <div
-          class="border flex flex-col gap-2 p-2.5 bg-background-2 xl:col-start-2 xl:row-start-1 xl:row-span-2"
+          class="border border-black flex flex-col gap-2 p-2.5 bg-background-2 xl:col-start-2 xl:row-start-1 xl:row-span-2"
         >
           <p class="text-background">
             Data visualizations of scraped software developer jobs providing
@@ -354,10 +360,10 @@
         </div>
 
         <div
-          class="border bg-background p-2.5 flex justify-center items-start gap-2"
+          class="border border-black bg-background p-2.5 flex justify-center items-start gap-2"
         >
           <div class="p-0.5 relative">
-            <p class="border relative z-10 bg-background p-0.5">
+            <p class="border border-black relative z-10 bg-background p-0.5">
               <a
                 href="https://github.com/kenBinary/trabahuso-frontend"
                 target="_blank"
@@ -373,7 +379,7 @@
           </div>
 
           <div class="p-0.5 relative">
-            <p class="border relative z-10 bg-background p-0.5">
+            <p class="border border-black relative z-10 bg-background p-0.5">
               <a
                 href="https://kenbinary.github.io/trabahuso-frontend/"
                 target="_blank"
@@ -391,14 +397,18 @@
       </div>
     </div>
 
-    <div class="border-b-4 p-5 sm:p-8 xl:px-56 xl:py-28">
-      <div class="flex flex-col relative border-2 xl:flex-row">
-        <div class="border shrink bg-background relative z-10">
-          <div class="font-bold p-2.5 border-b-2 text-3xl xl:text-6xl">
+    <div class="border-b-4 border-black p-5 sm:p-8 xl:px-56 xl:py-28">
+      <div class="flex flex-col relative border-2 border-black xl:flex-row">
+        <div class="border border-black shrink bg-background relative z-10">
+          <div
+            class="font-bold p-2.5 border-b-2 border-black text-3xl xl:text-6xl"
+          >
             EDUCATION
           </div>
 
-          <div class="p-2.5 border-b-2 flex justify-center items-center">
+          <div
+            class="p-2.5 border-b-2 border-black flex justify-center items-center"
+          >
             <img
               src="/education-graphic.svg"
               alt="image of boy reading depicting education"
@@ -414,13 +424,15 @@
         </div>
 
         <div
-          class="border shrink grow flex flex-col bg-background relative z-10"
+          class="border border-black shrink grow flex flex-col bg-background relative z-10"
         >
-          <div class="border-b grid grid-cols-[1fr_3fr] flex-1 items-center">
+          <div
+            class="border-b border-black grid grid-cols-[1fr_3fr] flex-1 items-center"
+          >
             <img
               src="/university.svg"
               alt="image of university building "
-              class="p-2.5 border-r hidden h-full xl:block"
+              class="p-2.5 border-r border-black hidden h-full xl:block"
             />
             <div class="p-2.5 col-span-2 xl:col-span-1">
               <div class="text-sm">College</div>
@@ -432,11 +444,13 @@
             </div>
           </div>
 
-          <div class="border-b grid grid-cols-[1fr_3fr] flex-1 items-center">
+          <div
+            class="border-b border-black grid grid-cols-[1fr_3fr] flex-1 items-center"
+          >
             <img
               src="/senior-high.svg"
               alt="image of university building "
-              class="p-2.5 border-r hidden h-full xl:block"
+              class="p-2.5 border-r border-black hidden h-full xl:block"
             />
             <div class="p-2.5 col-span-2 xl:col-span-1">
               <div class="text-sm">Senior High School</div>
@@ -456,7 +470,7 @@
     </div>
 
     <div class="flex flex-col gap-8 p-5 sm:p-8 xl:px-56 xl:py-28">
-      <div class="border-2 col-span-2 flex flex-col z-10 relative">
+      <div class="border-2 border-black col-span-2 flex flex-col z-10 relative">
         <div
           class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2.5 translate-y-2.5 z-0"
         ></div>
@@ -483,11 +497,11 @@
         ></div>
 
         <div
-          class="bg-background border-2 p-2.5 flex flex-wrap gap-8 relative flex-col md:flex-row"
+          class="bg-background border-2 border-black p-2.5 flex flex-wrap gap-8 relative flex-col md:flex-row"
         >
           <a
             href="https://www.linkedin.com/in/kjbdev/"
-            class="flex p-2 justify-between gap-2 border-2 flex-1 text-xl font-bold"
+            class="flex p-2 justify-between gap-2 border-2 border-black flex-1 text-xl font-bold"
             target="_blank"
           >
             <div class="flex gap-2 items-center">
@@ -507,7 +521,7 @@
 
           <a
             href="https://github.com/kenBinary"
-            class="flex p-2 justify-between gap-2 border-2 flex-1 text-xl font-bold"
+            class="flex p-2 justify-between gap-2 border-2 border-black flex-1 text-xl font-bold"
             target="_blank"
           >
             <div class="flex gap-2 items-center">
@@ -527,7 +541,7 @@
 
           <a
             href="https://www.facebook.com/kjbDev/"
-            class="flex p-2 justify-between gap-2 border-2 flex-1 text-xl font-bold"
+            class="flex p-2 justify-between gap-2 border-2 border-black flex-1 text-xl font-bold"
             target="_blank"
           >
             <div class="flex gap-2 items-center">
